2005-03-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_details.cc: on_flowtable_layout_changed(): 
	Update the data as well as the structure, because updating the 
	structure clears the widgets.

2005-03-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/entry_glom.[h|cc]: Show a Choose Field context menu 
	when in developer mode, and signal to the DataWidget when it has been 
	selected.
	* glom/mode_data/dialog_choose_field.[h|cc]: set_document(): Select 
	the current field at the start. Make double-click choose a field.

2005-03-09  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/datawidget.[h|cc]: Attempt to add a context menu 
	to choose the field. Not working yet. Some EventBox problem maybe.

2005-03-08  Murray Cumming  <murrayc@murrayc.com>

	* examples/example_small_business.glom: Invoices table: Make the 
	contact name lookup a name from the contacts table.

2005-03-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/: More use of the stored primary key fields 
	instead of getting them from the list of fields via their index. This 
	means that the primary key can still be used when it is not shown.
	* glom/mode_data/box_data_list_related.cc: Set the foreign key value 
	even if it is not shown. This means that related records portals 
	no longer need to show the primary key or the foreign key, both of 
	which are uninteresting to most operators.

2005-03-08  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/db_adddel.[h|cc]: Remove as_value
	from method names because they are all by value. Added 
	get/set_key_field() so it is easy to know the primary key for the 
	table.
	* glom/utility_widgets/db_adddel/glom_db_treemodel.[h|cc]: create() 
	now takes a list of fields - one for each column. This should allow 
	us to construct a SQL query from the model itself in future.
	* glom/mode_data/box_data_list.[h|cc]: Store the primary key field 
	in the AddDel.